<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/addEditCourseNestedScrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:elevation="16dp"
	android:pointerIcon="context_menu"
	android:visibility="visible"
	tools:visibility="visible"
	>
<androidx.appcompat.widget.LinearLayoutCompat
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/md_theme_dark_onPrimary"
	android:orientation="vertical"
	android:paddingHorizontal="8dp"
	android:paddingVertical="24dp"
	android:visibility="visible"
	tools:context=".terms.AddEditTermActivity"
	tools:visibility="visible"
	>

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/add_edit_course_edit_text_course_name"
		style="@style/edit_text_with_hint"
		android:hint="@string/course_name"
		android:textColorHint="#B388FF"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:baselineAligned="true"
		android:orientation="horizontal"
		>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/add_edit_course_textview_selected_course_start_date"
			style="@style/date_select_with_hint"
			android:hint="@string/course_start_date"
			android:textColorHint="#B388FF"
			/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button_select_course_start_date"
			style="@style/MyButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="4"
			android:shadowDx="5"
			android:shadowDy="5"
			android:shadowRadius="3"
			android:text="@string/button_select_start_date_text"
			android:textColor="#FFFFFF"
			android:textSize="20sp"
			/>
	</LinearLayout>

	<!-- 	<LinearLayout -->
	<!-- 		android:layout_width="match_parent" -->
	<!-- 		android:layout_height="wrap_content" -->
	<!-- 		android:orientation="horizontal" -->
	<!-- 		android:visibility="gone" -->
	<!-- 		tools:visibility="gone" -->
	<!-- 		> -->
	<!-- 	<ToggleButton -->
	<!-- 		android:id="@+id/course_start_alarm_toggle" -->
	<!-- 		android:layout_width="0dp" -->
	<!-- 		android:layout_height="wrap_content" -->
	<!-- 		android:layout_margin="16dp" -->
	<!-- 		android:layout_weight="1" -->
	<!-- 		android:text="@string/start_alarm_button" -->
	<!-- 		android:textOff="@string/start_alarm_off" -->
	<!-- 		android:textOn="@string/start_alarm_on" -->
	<!-- 		/> -->

	<!-- </LinearLayout> -->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:baselineAligned="true"
		android:orientation="horizontal"
		>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/add_edit_course_textview_selected_course_end_date"
			style="@style/date_select_with_hint"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="8dp"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="16dp"
			android:layout_weight="4"
			android:hint="@string/course_end_date"
			android:textColorHint="#B388FF"
			android:textSize="24sp"
			/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/button_select_course_end_date"
			style="@style/MyButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_weight="4"
			android:shadowDx="5"
			android:shadowDy="5"
			android:shadowRadius="3"
			android:text="@string/button_select_end_date_text"
			android:textSize="20sp"
			/>
	</LinearLayout>

	<!-- 	<LinearLayout -->
	<!-- 		android:layout_width="match_parent" -->
	<!-- 		android:layout_height="wrap_content" -->
	<!-- 		android:orientation="horizontal" -->
	<!-- 		android:visibility="gone" -->
	<!-- 		tools:visibility="gone" -->
	<!-- 		> -->
	<!-- 	<ToggleButton -->
	<!-- 		android:id="@+id/course_end_alarm_toggle" -->
	<!-- 		android:layout_width="0dp" -->
	<!-- 		android:layout_height="wrap_content" -->
	<!-- 		android:layout_margin="16dp" -->
	<!-- 		android:layout_weight="1" -->
	<!-- 		android:text="@string/end_alarm_button" -->
	<!-- 		android:textOff="@string/end_alarm_off" -->
	<!-- 		android:textOn="@string/end_alarm_on" -->
	<!-- 		/> -->

	<!-- </LinearLayout> -->

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/add_course_term_spinner"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:padding="8dp"
		app:boxStrokeErrorColor="@color/md_theme_dark_errorContainer"
		app:counterOverflowTextColor="@color/md_theme_dark_errorContainer"
		app:cursorErrorColor="@color/md_theme_dark_errorContainer"
		app:errorIconTint="@color/md_theme_dark_errorContainer"
		app:errorTextColor="@color/md_theme_dark_errorContainer"
		app:counterTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:counterOverflowTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
		app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
		app:placeholderTextAppearance="@style/TextAppearance.AppCompat.Button"
		>

		<com.google.android.material.textfield.MaterialAutoCompleteTextView
			android:id="@+id/add_edit_course_textview_selected_term"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/select_term"
			android:inputType="none"
			android:labelFor="@id/add_course_term_spinner"
			android:textColor="@color/md_theme_dark_inverseSurface"
			android:textColorHint="#B388FF"
			android:visibility="visible"
			tools:visibility="visible"
			tools:ignore="SpeakableTextPresentCheck"
			/>
	</com.google.android.material.textfield.TextInputLayout>



	<EditText
		android:id="@+id/add_edit_course_text_view_instructor_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints="name"
		android:ems="10"
		android:hint="@string/instructor_name"
		android:inputType="text"
		android:minHeight="48dp"
		android:textColor="@color/md_theme_dark_inverseSurface"
		android:textColorHint="#B388FF"
		/>

	<EditText
		android:id="@+id/add_edit_course_text_view_instructor_phone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints="phone"
		android:ems="10"
		android:hint="@string/instructor_phone"
		android:inputType="phone"
		android:minHeight="48dp"
		android:textColor="@color/md_theme_dark_inverseSurface"
		android:textColorHint="#B388FF"
		/>

	<EditText
		android:id="@+id/add_edit_course_text_view_instructor_email"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:autofillHints="emailAddress"
		android:ems="10"
		android:hint="@string/instructor_email"
		android:inputType="textEmailAddress"
		android:minHeight="48dp"
		android:textColor="@color/md_theme_dark_inverseSurface"
		android:textColorHint="#B388FF"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/add_course_status_spinner"
		style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:padding="8dp"
		android:visibility="visible"
		tools:visibility="visible"
		app:errorIconTint="@color/md_theme_dark_errorContainer"
		app:cursorErrorColor="@color/md_theme_dark_errorContainer"
		app:counterOverflowTextColor="@color/md_theme_dark_errorContainer"
		app:boxStrokeErrorColor="@color/md_theme_dark_errorContainer"
		app:counterOverflowTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:counterTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:errorTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:errorTextColor="@color/md_theme_dark_errorContainer"
		app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
		app:placeholderTextAppearance="@style/TextAppearance.AppCompat.Small"
		app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
		>

		<com.google.android.material.textfield.MaterialAutoCompleteTextView
			android:id="@+id/add_edit_course_text_view_course_status"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/select_a_course_status"
			android:inputType="none"
			android:labelFor="@id/add_course_status_spinner"
			android:textColor="@color/md_theme_dark_inverseSurface"
			android:textColorHint="#B388FF"
			android:visibility="visible"
			app:simpleItems="@array/course_statuses"
			tools:visibility="visible"
			tools:ignore="SpeakableTextPresentCheck"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<EditText
		android:id="@+id/add_edit_course_text_view_course_note"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:autofillHints="none"
		android:ems="10"
		android:gravity="start|top"
		android:hint="@string/course_notes_hint"
		android:inputType="textMultiLine"
		android:lines="3"
		android:minHeight="48dp"
		android:textColor="@color/md_theme_dark_inverseSurface"
		android:textColorHint="#B388FF"
		/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>

		<Button
			android:id="@+id/setCourseStartAlarmButton"
			android:layout_width="118dp"
			android:layout_height="66dp"
			android:layout_marginEnd="48dp"
			android:paddingHorizontal="8dp"
			android:shadowColor="#000000"
			android:shadowDx="5"
			android:shadowDy="5"
			android:shadowRadius="3"
			android:text="@string/set_course_start_alarm_button_label"
			android:textAlignment="center"
			android:textStyle="bold"
			app:layout_constraintEnd_toStartOf="@+id/courseStartAlarmDateTimeTextView"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.01"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
		<TextView
			android:id="@+id/courseStartAlarmDateTimeTextView"
			android:layout_width="130dp"
			android:layout_height="37dp"
			android:hint="@string/course_start_alarm_datetime_hint"
			android:textAlignment="textEnd"
			android:textColor="#FFFFFF"
			android:textColorHint="#B388FF"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			/>
		<Button
			android:id="@+id/courseStartAlarmCancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:backgroundTint="#B71C1C"
			android:maxLines="2"
			android:minLines="2"
			android:paddingHorizontal="16dp"
			android:paddingVertical="8dp"
			android:shadowColor="#000000"
			android:shadowDx="4"
			android:shadowDy="4"
			android:shadowRadius="3"
			android:singleLine="false"
			android:text="@string/cancel_start_alarm_button_label"
			android:textSize="11sp"
			android:textStyle="bold|italic"
			android:typeface="normal"
			android:visibility="invisible"
			app:layout_constraintEnd_toStartOf="@+id/courseStartAlarmDateTimeTextView"
			app:layout_constraintStart_toEndOf="@+id/setCourseStartAlarmButton"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.423"
			tools:visibility="visible"
			/>

</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>

		<Button
			android:id="@+id/setCourseEndAlarmButton"
			android:layout_width="118dp"
			android:layout_height="66dp"
			android:layout_marginEnd="48dp"
			android:paddingHorizontal="8dp"
			android:shadowColor="#000000"
			android:shadowDx="5"
			android:shadowDy="5"
			android:shadowRadius="3"
			android:text="@string/set_course_end_alarm_button_text"
			android:textAlignment="center"
			android:textStyle="bold"
			app:layout_constraintEnd_toStartOf="@+id/courseEndAlarmDateTimeTextView"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.01"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
		<TextView
			android:id="@+id/courseEndAlarmDateTimeTextView"
			android:layout_width="130dp"
			android:layout_height="37dp"
			android:hint="@string/course_end_alarm_datetime_hint"
			android:textAlignment="textEnd"
			android:textColor="#FFFFFF"
			android:textColorHint="#B388FF"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			/>
		<Button
			android:id="@+id/courseEndAlarmCancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:backgroundTint="#B71C1C"
			android:maxLines="2"
			android:minLines="2"
			android:paddingHorizontal="16dp"
			android:paddingVertical="8dp"
			android:shadowColor="#000000"
			android:shadowDx="4"
			android:shadowDy="4"
			android:shadowRadius="3"
			android:singleLine="false"
			android:text="@string/cancel_end_alarm_button_label"
			android:textSize="11sp"
			android:textStyle="bold|italic"
			android:typeface="normal"
			android:visibility="invisible"
			app:layout_constraintEnd_toStartOf="@+id/courseEndAlarmDateTimeTextView"
			app:layout_constraintStart_toEndOf="@+id/setCourseEndAlarmButton"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.423"
			tools:visibility="visible"
			/>

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
