<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="8dp"
	android:background="#F57C00"
	android:padding="8dp"
	>

<androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#F57C00"
	>

<TextView
	android:id="@+id/course_note_list_course_name"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_margin="8dp"
	android:layout_marginStart="32dp"
	android:autoSizeTextType="uniform"
	android:text="@string/course_name"
	android:textColor="#263238"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintEnd_toStartOf="@+id/course_note_list_course_note"
	/><TextView
	android:id="@+id/course_note_list_course_note"
	android:layout_width="172dp"
	android:layout_height="90dp"
	android:layout_marginVertical="8dp"
	android:autoSizeTextType="uniform"
	android:singleLine="false"
	android:text="@string/course_notes_hint"
	android:textColor="#263238"
	app:layout_constraintTop_toTopOf="@+id/course_note_list_course_name"
	app:layout_constraintBottom_toBottomOf="@+id/course_note_list_course_name"
	app:layout_constraintStart_toEndOf="@+id/course_note_list_course_name"
	app:layout_constraintEnd_toStartOf="@+id/course_note_list_send_email"
	/><ImageButton
	android:id="@+id/course_note_list_send_email"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:backgroundTint="#0288D1"
	android:contentDescription="@string/send_course_note_by_email_button"
	app:tint="#FFFFFF"
	app:srcCompat="@android:drawable/ic_dialog_email"
	app:layout_constraintTop_toTopOf="@+id/course_note_list_course_note"
	app:layout_constraintBottom_toBottomOf="@+id/course_note_list_course_note"
	app:layout_constraintStart_toEndOf="@+id/course_note_list_course_note"
	app:layout_constraintEnd_toStartOf="@+id/course_note_list_send_sms"
	tools:ignore="RedundantDescriptionCheck"
	/>
	<ImageButton
		android:id="@+id/course_note_list_send_sms"
		android:layout_width="60dp"
		android:layout_height="51dp"
		android:layout_marginEnd="12dp"
		android:backgroundTint="#0288D1"
		android:contentDescription="@string/send_course_note_by_sms_button"
		app:tint="#FFFFFF"
		app:srcCompat="@android:drawable/stat_notify_chat"
		app:layout_constraintTop_toTopOf="@+id/course_note_list_send_email"
		app:layout_constraintBottom_toBottomOf="@+id/course_note_list_send_email"
		app:layout_constraintStart_toEndOf="@+id/course_note_list_send_email"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintVertical_bias="1.0"
		tools:ignore="RedundantDescriptionCheck"
		/></androidx.constraintlayout.widget.ConstraintLayout></com.google.android.material.card.MaterialCardView>
