<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/list_item_card_view"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="16dp"
	android:layout_marginTop="8dp"
	android:background="#329186"
	app:strokeWidth="2dp"
	app:strokeColor="@color/md_theme_dark_background"
	>

<androidx.constraintlayout.widget.ConstraintLayout
	style="@style/list_item_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#C378DD"
	>

<TextView
	android:id="@+id/assessment_list_assessment_name_text_view"
	style="@style/list_item_text_view"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginBottom="8dp"
	android:layout_marginEnd="8dp"
	android:layout_marginStart="8dp"
	android:layout_marginTop="8dp"
	android:text="@string/assessment_name"
	android:textSize="18sp"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintVertical_bias="0.0"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintHorizontal_bias="0.702"
	/><TextView
	android:id="@+id/assessment_list_term_name_text_view"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginBottom="4dp"
	android:layout_marginEnd="64dp"
	android:layout_marginStart="42dp"
	android:shadowColor="#FFFFFF"
	android:shadowDx="1.5"
	android:shadowDy="1.5"
	android:shadowRadius="1"
	android:text="@string/term_name"
	android:textColor="?android:attr/colorForeground"
	android:textStyle="bold"
	app:layout_constraintTop_toTopOf="parent"
	app:layout_constraintEnd_toStartOf="@+id/assessment_list_assessment_name_text_view"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintBottom_toTopOf="@+id/assessment_list_course_name_text_view"
	/><TextView
	android:id="@+id/assessment_list_course_name_text_view"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginBottom="1dp"
	android:layout_marginEnd="64dp"
	android:layout_marginStart="42dp"
	android:layout_marginTop="4dp"
	android:shadowColor="#FFFFFF"
	android:shadowDx="1.5"
	android:shadowDy="1.5"
	android:shadowRadius="1"
	android:text="@string/course_name"
	android:textColor="@color/md_theme_dark_background"
	android:textStyle="bold"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintEnd_toStartOf="@+id/assessment_list_assessment_name_text_view"
	app:layout_constraintTop_toBottomOf="@+id/assessment_list_term_name_text_view"
	/></androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
